syntax = "proto3";
package proto;

option java_package = "com.blastedstudios.freeboot.network";
option java_outer_classname = "Messages";
// @SuppressWarnings({ "unchecked", "unused" })

enum MessageType {
  UNDEFINED = 0;
  ATTACK = 1;
  CONNECTED = 2;
  DEAD = 3;
  DISCONNECTED = 4;
  NAME_UPDATE = 7;
  NPC_STATE = 8;
  PLAYER_STATE = 10;
  RELOAD = 11;
  RESPAWN = 12;
  TEXT = 13;
  TEXT_REQUEST = 14;
  WORLD_HASH_REQUEST = 20;
  WORLD_HASH_RESPONSE = 21;
  WORLD_FILE_REQUEST = 22;
  WORLD_FILE_RESPONSE = 25;
}

message Connected {}
message Disconnected {}

message WorldHashRequest {}
message WorldHashResponse {
  string md5 = 1;
  int32 size_bytes = 2;
}

message WorldFileRequest {}
message WorldFileResponse {
  string md5 = 1;
  bytes file = 2;
}

message UUID {
  sint64 least_significant_bits = 1;
  sint64 most_significant_bits = 2;
}

message NetBeing {
  UUID uuid = 1;
  string name = 2;
  float pos_x = 3;
  float pos_y = 4;
  float vel_x = 5;
  float vel_y = 6;
  float max_hp = 7;
  float hp = 8;
  int32 currentWeapon = 9;
  repeated NetWeapon weapons = 10;
  string resource = 11;
  string ragdoll_resource = 12;
  FactionEnum faction = 13;
  float aim = 14;
  ClassEnum player_class = 15;

  enum FactionEnum {
    UNDEFINED = 0;
  	FRIEND = 1;
  	ENEMY = 2;
  }

  enum ClassEnum {
    Undefined = 0;
  	Soldier = 1;
  	Medic = 2;
  	Brawler = 3;
  	Demo = 4;
  	Sniper = 5;
  }
}

message NetWeapon {
  string id = 1;
}

message Attack {
  string name = 1;
  UUID uuid = 2;
  float pos_x = 3;
  float pos_y = 4;
}

message Dead {
  string name = 1;
  UUID uuid = 2;
}

message NPCState {
  repeated NetBeing npcs = 1;
}

message NameUpdate {
  string name = 1;
}

message PlayerState {
  repeated NetBeing players = 1;
}

message Reload {
  UUID uuid = 1;
}

message Respawn {
  UUID uuid = 1;
  string name = 2;
  float pos_x = 3;
  float pos_y = 4;
}

message Text {
  string content = 1;
  string origin = 2;
}

message TextRequest {
  string content = 1;
}